--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-khoa5-bookingticket-movie",
+  "name": "bc58-xemphim",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,9 +14,6 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "history": "^4.10.0",
-    "i18next": "^20.3.2",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
@@ -32,6 +29,7 @@
     "sass-loader": "^11.1.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.0",
+    "webpack": "^4.44.2",
     "yup": "^0.32.9"
   },
   "scripts": {
